--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@thatopen/components": "^2.4.11",
     "@thatopen/components-front": "^2.4.11",
-    "@thatopen/fragments": "^2.4.11",
+    "@thatopen/fragments": "^3.0.0",
     "three": "^0.170.0",
     "web-ifc": "^0.0.72"
   },
