--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@thatopen/components": "^2.4.11",
-    "@thatopen/components-front": "^2.4.11",
-    "@thatopen/fragments": "^3.0.0",
-    "three": "^0.170.0",
-    "web-ifc": "^0.0.72"
+    "@thatopen/components": "2.3.0",
+    "@thatopen/components-front": "2.3.0",
+    "@thatopen/fragments": "2.3.0",
+    "three": "0.160.0",
+    "web-ifc": "0.0.66"
   },
   "devDependencies": {
     "typescript": "^5.4.5",
